{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 149,
  "lineage": "e88c751c-50c8-320a-a092-1c93fafe2c25",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d5850840f35c5079",
            "arn": "arn:aws:ec2:us-east-1:444083008462:elastic-ip/eipalloc-0d5850840f35c5079",
            "domain": "vpc",
            "id": "eipalloc-0d5850840f35c5079",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-215-65-98.compute-1.amazonaws.com",
            "public_ip": "3.215.65.98",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "Ecommerce-NAT-EIP-us-east-1a",
              "Project": "ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Ecommerce-NAT-EIP-us-east-1a",
              "Project": "ecommerce"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0152c5d866dbfc2e9",
            "arn": "arn:aws:ec2:us-east-1:444083008462:elastic-ip/eipalloc-0152c5d866dbfc2e9",
            "domain": "vpc",
            "id": "eipalloc-0152c5d866dbfc2e9",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-228-250-17.compute-1.amazonaws.com",
            "public_ip": "3.228.250.17",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "Ecommerce-NAT-EIP-us-east-1b",
              "Project": "ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Ecommerce-NAT-EIP-us-east-1b",
              "Project": "ecommerce"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:444083008462:internet-gateway/igw-0dd8471f20ec3fa2d",
            "id": "igw-0dd8471f20ec3fa2d",
            "owner_id": "444083008462",
            "tags": {
              "Environment": "production",
              "Name": "Ecommerce-Production-IGW",
              "Project": "ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Ecommerce-Production-IGW",
              "Project": "ecommerce"
            },
            "vpc_id": "vpc-0026231a7134637a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecommerce_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:444083008462:loadbalancer/app/ecommerce-alb/813a66a04f933205",
            "arn_suffix": "app/ecommerce-alb/813a66a04f933205",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecommerce-alb-1052854365.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:444083008462:loadbalancer/app/ecommerce-alb/813a66a04f933205",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecommerce-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-097c92729448b5452"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07a0af333408fe980"
              },
              {
                "subnet_id": "subnet-0d3953297e9f3ad5d"
              }
            ],
            "subnets": [
              "subnet-07a0af333408fe980",
              "subnet-0d3953297e9f3ad5d"
            ],
            "tags": {
              "Environment": "production",
              "Name": "Ecommerce-ALB",
              "Project": "ecommerce",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Ecommerce-ALB",
              "Project": "ecommerce",
              "Tier": "public"
            },
            "vpc_id": "vpc-0026231a7134637a9",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:444083008462:listener/app/ecommerce-alb/813a66a04f933205/36266fecafc6149d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:444083008462:targetgroup/ecommerce-tg/0eff58a8f1e898d1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:444083008462:listener/app/ecommerce-alb/813a66a04f933205/36266fecafc6149d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:444083008462:loadbalancer/app/ecommerce-alb/813a66a04f933205",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.ecommerce_alb",
            "aws_lb_target_group.ecommerce_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecommerce_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:444083008462:targetgroup/ecommerce-tg/0eff58a8f1e898d1",
            "arn_suffix": "targetgroup/ecommerce-tg/0eff58a8f1e898d1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:444083008462:targetgroup/ecommerce-tg/0eff58a8f1e898d1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecommerce-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "Ecommerce-Target-Group",
              "Project": "ecommerce",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Ecommerce-Target-Group",
              "Project": "ecommerce",
              "Tier": "private"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0026231a7134637a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d5850840f35c5079",
            "association_id": "eipassoc-0554b6fa403fc9ae4",
            "connectivity_type": "public",
            "id": "nat-018f4086484583f27",
            "network_interface_id": "eni-0aa49c13f62572ec0",
            "private_ip": "10.0.1.248",
            "public_ip": "3.215.65.98",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d3953297e9f3ad5d",
            "tags": {
              "Environment": "production",
              "Name": "Ecommerce-NAT-Gateway-us-east-1a",
              "Project": "ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Ecommerce-NAT-Gateway-us-east-1a",
              "Project": "ecommerce"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_a",
            "aws_internet_gateway.main",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0152c5d866dbfc2e9",
            "association_id": "eipassoc-0f9999d0e2e380617",
            "connectivity_type": "public",
            "id": "nat-0a0ca51170e0cb819",
            "network_interface_id": "eni-030ceb96968027d1e",
            "private_ip": "10.0.2.104",
            "public_ip": "3.228.250.17",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07a0af333408fe980",
            "tags": {
              "Environment": "production",
              "Name": "Ecommerce-NAT-Gateway-us-east-1b",
              "Project": "ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Ecommerce-NAT-Gateway-us-east-1b",
              "Project": "ecommerce"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_b",
            "aws_internet_gateway.main",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:444083008462:route-table/rtb-02b6f084bab7f28e6",
            "id": "rtb-02b6f084bab7f28e6",
            "owner_id": "444083008462",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-018f4086484583f27",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "Ecommerce-Private-RouteTable-us-east-1a",
              "Project": "ecommerce",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Ecommerce-Private-RouteTable-us-east-1a",
              "Project": "ecommerce",
              "Tier": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0026231a7134637a9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_a",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat_a",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:444083008462:route-table/rtb-0ecaeff2291a6dfff",
            "id": "rtb-0ecaeff2291a6dfff",
            "owner_id": "444083008462",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a0ca51170e0cb819",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "Ecommerce-Private-RouteTable-us-east-1b",
              "Project": "ecommerce",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Ecommerce-Private-RouteTable-us-east-1b",
              "Project": "ecommerce",
              "Tier": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0026231a7134637a9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_b",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat_b",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:444083008462:route-table/rtb-046176199ea821860",
            "id": "rtb-046176199ea821860",
            "owner_id": "444083008462",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dd8471f20ec3fa2d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "Ecommerce-Public-RouteTable",
              "Project": "ecommerce",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Ecommerce-Public-RouteTable",
              "Project": "ecommerce",
              "Tier": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0026231a7134637a9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a1b8efaae3851ac",
            "route_table_id": "rtb-02b6f084bab7f28e6",
            "subnet_id": "subnet-0d40f88446f856a86"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_a",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat_a",
            "aws_route_table.private_a",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01220db0b62d153cc",
            "route_table_id": "rtb-0ecaeff2291a6dfff",
            "subnet_id": "subnet-004846b4e0ade4764"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_b",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat_b",
            "aws_route_table.private_b",
            "aws_subnet.private_b",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcb746669f4cb41f",
            "route_table_id": "rtb-046176199ea821860",
            "subnet_id": "subnet-0d3953297e9f3ad5d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06054cc14220bf4f7",
            "route_table_id": "rtb-046176199ea821860",
            "subnet_id": "subnet-07a0af333408fe980"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:444083008462:security-group/sg-097c92729448b5452",
            "description": "Security group for the public Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097c92729448b5452",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Ecommerce-ALB-SG",
            "name_prefix": "",
            "owner_id": "444083008462",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "Ecommerce-ALB-SG",
              "Project": "ecommerce",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Ecommerce-ALB-SG",
              "Project": "ecommerce",
              "Tier": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0026231a7134637a9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:444083008462:security-group/sg-0b98388b7af1679f2",
            "description": "Security group for the application servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b98388b7af1679f2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB only",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-097c92729448b5452"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS from ALB only",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-097c92729448b5452"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Ecommerce-App-SG",
            "name_prefix": "",
            "owner_id": "444083008462",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "Ecommerce-App-SG",
              "Project": "ecommerce",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Ecommerce-App-SG",
              "Project": "ecommerce",
              "Tier": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0026231a7134637a9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:444083008462:security-group/sg-0a7648412902e9ecf",
            "description": "Security group for the RDS database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7648412902e9ecf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from application servers only",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b98388b7af1679f2"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Ecommerce-DB-SG",
            "name_prefix": "",
            "owner_id": "444083008462",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "Ecommerce-DB-SG",
              "Project": "ecommerce",
              "Tier": "database"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Ecommerce-DB-SG",
              "Project": "ecommerce",
              "Tier": "database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0026231a7134637a9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:444083008462:subnet/subnet-0d40f88446f856a86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d40f88446f856a86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "444083008462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "Ecommerce-Private-Subnet-us-east-1a",
              "Project": "ecommerce",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Ecommerce-Private-Subnet-us-east-1a",
              "Project": "ecommerce",
              "Tier": "private"
            },
            "vpc_id": "vpc-0026231a7134637a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:444083008462:subnet/subnet-004846b4e0ade4764",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004846b4e0ade4764",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "444083008462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "Ecommerce-Private-Subnet-us-east-1b",
              "Project": "ecommerce",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Ecommerce-Private-Subnet-us-east-1b",
              "Project": "ecommerce",
              "Tier": "private"
            },
            "vpc_id": "vpc-0026231a7134637a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:444083008462:subnet/subnet-0d3953297e9f3ad5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3953297e9f3ad5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "444083008462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "Ecommerce-Public-Subnet-us-east-1a",
              "Project": "ecommerce",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Ecommerce-Public-Subnet-us-east-1a",
              "Project": "ecommerce",
              "Tier": "public"
            },
            "vpc_id": "vpc-0026231a7134637a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:444083008462:subnet/subnet-07a0af333408fe980",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a0af333408fe980",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "444083008462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "Ecommerce-Public-Subnet-us-east-1b",
              "Project": "ecommerce",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Ecommerce-Public-Subnet-us-east-1b",
              "Project": "ecommerce",
              "Tier": "public"
            },
            "vpc_id": "vpc-0026231a7134637a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:444083008462:vpc/vpc-0026231a7134637a9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d6158a972c73628d",
            "default_route_table_id": "rtb-00c9153ef8e89150a",
            "default_security_group_id": "sg-04fc371059f799466",
            "dhcp_options_id": "dopt-011b422590bce4c4b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0026231a7134637a9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00c9153ef8e89150a",
            "owner_id": "444083008462",
            "tags": {
              "Environment": "production",
              "Name": "Ecommerce-Production-VPC",
              "Project": "ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Ecommerce-Production-VPC",
              "Project": "ecommerce"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}